add command to generate java-binary