@@ -1,2 +1,3 @@
 ##### usage
-$ java -Djava.library.path=xxxx/libs/ -cp xxxxxxx/test_jar_demo:/xxxxxx/libs/agora.jar RecordingSample
+1. javac -Djava.ext.dirs=../libs RecordingSample.java
+2. java -Djava.library.path=xxxx/libs/ -cp xxxxxxx/test_jar_demo:/xxxxxx/libs/agora.jar RecordingSample
